tests/invalid/Assign_Invalid_8.whiley
function f(int x) -> int:
    x = 2.0
    return 1
